--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "adldap2/adldap2",
+    "name": "fury93/adldap2",
     "type": "library",
     "description": "A PHP LDAP Package for Active Directory Manipulation.",
     "keywords": [
